<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/tx_voreinstellungen_allgemein" >

        <EditTextPreference
            android:defaultValue=""
            android:key="benutzer"
            android:title="@string/tx_voreinstellungen_benutzer" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/tx_voreinstellungen_persoenliches" >

        <ListPreference
            android:entries="@array/lieblingsfarbe"
            android:entryValues="@array/lieblingsfarbwerte"
            android:key="lieblingsfarbe"
            android:title="@string/tx_voreinstellungen_lieblingsfarbe" />

        <ListPreference
            android:entries="@array/stimmung"
            android:entryValues="@array/stimmung"
            android:key="stimmung"
            android:title="@string/tx_voreinstellungen_stimmung" />
    </PreferenceCategory>
</PreferenceScreen>